<resources>
    <string name="app_name">Mara Capture</string>
    <string name="hint_url">адрес сервера, например http://doctor.local:8788</string>
    <string name="hint_token">токен устройства, из contextd --pair</string>
    <string name="save">Сохранить и запустить</string>
    <string name="perms">Выдать разрешения</string>
    <string name="folder">Выбрать папку с записями</string>
    <string name="selftest">Проверка связи</string>
    <string name="wizard">Мастер: что видит приложение</string>
    <string name="battery">Снять ограничение батареи</string>
    <string name="notif">Доступ к уведомлениям (WhatsApp, SMS)</string>
    <string name="copy">Скопировать отчёт</string>
</resources>
