<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_url"
            android:inputType="textUri"
            android:autofillHints="" />

        <EditText
            android:id="@+id/token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_token"
            android:inputType="textPassword"
            android:autofillHints="" />

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <Button
            android:id="@+id/perms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/perms" />

        <Button
            android:id="@+id/folder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/folder" />

        <Button
            android:id="@+id/selftest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selftest" />

        <Button
            android:id="@+id/wizard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wizard" />

        <Button
            android:id="@+id/battery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/battery" />

        <Button
            android:id="@+id/copy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copy" />

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:textIsSelectable="true"
            android:typeface="monospace" />
    </LinearLayout>
</ScrollView>
